add Video geo localisation